--- a/trader-bot-view/src/app.css
+++ b/trader-bot-view/src/app.css
@@ -20,6 +20,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -44,23 +45,42 @@ h1 {
   text-align: center;
 }
 
-button {
+
+.active-element {
   border-radius: 8px;
+  margin: 10px 0;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  cursor: pointer;
+  cursor: default;
   transition: border-color 0.25s;
 }
-button:hover {
+
+.active-element:hover,
+button {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+
+.active-element:focus,
+.active-element:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.button {
+  cursor: pointer;
+}
+
+.error-text-red {
+  color: brown;
+}
+
+@media (prefers-color-scheme: light) {
+  .active-element {
+    background-color: #f9f9f9;
+  }
 }
 
 @media (prefers-color-scheme: light) {
@@ -68,10 +88,8 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
